# EEG-FMs

./: .gitignore
TS-FMs/: README.md  pyproject.toml
TS-FMs/configs/: bcic_iv_2a.yaml  mat.yaml
TS-FMs/scripts/: run_experiment.py
TS-FMs/src/ts_fms/: __init__.py  cli.py  config.py
TS-FMs/src/ts_fms/data/: __init__.py  electrodes.py  loaders.py  preprocessing.py  splits.py  types.py
TS-FMs/src/ts_fms/models/: __init__.py  backbones.py  probe.py
TS-FMs/src/ts_fms/training/: __init__.py  metrics.py  runner.py
TS-FMs/src/ts_fms_eeg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calibration-UCQ/: .gitignore  README.md  description.md  requirements.txt  run_experiment.py
calibration-UCQ/calibration_ucq/: __init__.py  cli.py  constants.py  data.py  metrics.py  models.py  training.py
