[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-fms-eeg"
version = "0.1.0"
description = "Frozen time-series foundation model probes for EEG downstream tasks."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "einops>=0.7",
  "mne>=1.6",
  "moabb>=1.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
moment = ["momentfm @ git+https://github.com/moment-timeseries-foundation-model/moment.git"]
granite = ["granite-tsfm>=0.3.6"]
all = [
  "granite-tsfm>=0.3.6",
  "momentfm @ git+https://github.com/moment-timeseries-foundation-model/moment.git",
]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ts-fms = "ts_fms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
